# awaken

./: .gitignore  LICENSE  README.md  awake.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
awaken/: __init__.py  actor.py  host_profile.py  main.py  scheduler.py
awaken/actions/: __init__.py  cursor.py  keyboard.py  keyboard_listener.py  mouse_listener.py  tweening.py  wheel_scroll.py
awaken/dto/: __init__.py  app_config.py  last_input_info.py  x_screen_saver_info.py
awaken/monitors/: __init__.py  monitor_factory.py  windows_monitor.py  x_11_monitor.py
awaken/system_idle_monitors/: __init__.py  gnome_wayland_monitor.py  kde_wayland_monitor.py  monitor.py  monitor_factory.py  os_x_monitor.py  windows_monitor.py  x_11_monitor.py
awaken/tui/: app.py  main_form.py
src/: iddle_time.py
stay_awake/: __init__.py  actor.py  main.py
stay_awake/dto/: Cursor.py  __init__.py
stay_awake/monitors/: __init__.py  gnome_wayland_monitor.py  monitor_factory.py  os_x_monitor.py  windows_monitor.py  x_11_monitor.py
stay_awake/monitors/info/: __init__.py
tests/: test_host_profile.py  test_kde_wayland_monitor.py  test_main.py  test_monitor_factory.py  test_scheduler.py  test_tweening.py
