[tool.poetry]
name = "awaken"
version = "0.1.0"
description = "Program to emulate user activity"
authors = ["Kulinich Anton <kulinich.anton@airslate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.0"
pyautogui = "^0.9.54"
jeepney = "^0.8.0"
psutil = "^6.1.1"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
