[tool.poetry]
name = "awaken"
version = "0.1.0"
description = "Program to emulate user activity"
authors = ["Kulinich Anton <kulinich.anton@airslate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.0"
pyautogui = "^0.9.54"
jeepney = "^0.8.0"
psutil = "^6.1.1"
pynput = "^1.7.7"
npyscreen = "^4.10.5"

[tool.poetry.scripts]
awaken = "awaken.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# ctypes / dto star-imports are intentional for platform bindings
"awaken/system_idle_monitors/windows_monitor.py" = ["F403", "F405"]
"awaken/system_idle_monitors/x_11_monitor.py" = ["F403", "F405"]
# pyautogui FAILSAFE must be set after import, before sibling imports that use gui.*
"awaken/actor.py" = ["E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
